# incrementum-tauri

./: (Children’s Health Defense) Robert F. Kennedy - The Real Anthony Fauci_ Bill Gates, Big Pharma, and the Global War on Democracy and Public Health-Skyhorse (2021).epub  .env  .eslintrc.cjs  .gitignore  CHANGELOG.md  Dockerfile.frontend  FEATURES_IMPLEMENTED.md  FEATURE_PROPOSALS.md  FILE_PICKER_FIX.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  IMPORT_FEATURES_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  OPENSPEC_IMPLEMENTATION_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_3_SUMMARY.md  PKGBUILD  PROJECT_SUMMARY.md  README.md  SESSION_3_SUMMARY.md  THEME_FIX_SUMMARY.md  THEME_SYSTEM_STATUS.md  TROUBLESHOOTING.md  Ultimate_History.apkg  Vagrantfile  docker-compose.yml  features.md  incrementum-wrapper.sh  incrementum.desktop  index.html  install.sh  nginx.conf  package-lock.json  package.json  plan.md  pnpm-lock.yaml  prompt.txt  setup-claude.sh  test.html  tsconfig.json  (+3 more)
api/: requirements.txt
browser_extension/: README.md  background.js  background_debug.js  background_minimal.js  content.js  manifest.json  manifest_debug.json  manifest_minimal.json  options.html  options.js  popup.css  popup.html  popup.js
demo/: README.md
docs/: ANKI_IMPORT_REPORT.md  BUILD_FIXES_REPORT.md  EPUB_IMPORT_FIX.md  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_STATUS.md  INSTALL.md  OCR_FEATURES.md  PHASE_2_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  PROXY_SETUP.md  PWA_DEPLOYMENT.md  SERDE_FIX.md  SETTINGS_FIX_REPORT.md  USER_HANDBOOK.md  (+4 more)
public/: sw.js  (+1 more)
src-tauri/: AppRun  Cargo.toml  build.rs  rustc-ice-2026-01-14T11_18_39-75686.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_document_progress.sql  002_add_fsrs_memory_state.sql  003_add_document_scheduling.sql
src-tauri/src/: anki.rs  browser_sync_server.rs  cloud_sync.rs  demo.rs  error.rs  integrations.rs  lib.rs  main.rs  notifications.rs  scheduler.rs  screenshot.rs  segmentation.rs  supermemo.rs  sync.rs  youtube.rs
src-tauri/src/ai/: flashcard_generator.rs  mod.rs  prompts.rs  provider_wrapper.rs  providers.rs  qa.rs  summarizer.rs
src-tauri/src/algorithms/: document_scheduler.rs  engaging_scheduler.rs  fsrs.rs  incremental_scheduler.rs  mod.rs  optimizer.rs  queue_selector.rs  supermemo.rs  tests.rs
src-tauri/src/backup/: manager.rs  mod.rs
src-tauri/src/cloud/: dropbox.rs  googledrive.rs  mod.rs  onedrive.rs  provider.rs
src-tauri/src/commands/: ai.rs  algorithm.rs  analytics.rs  anna_archive.rs  category.rs  collection_archive.rs  collections.rs  document.rs  extract.rs  extract_bulk.rs  extract_review.rs  file_drop.rs  learning_item.rs  legacy_import.rs  llm.rs  mcp.rs  mcp_and_llm.rs  mod.rs  notifications.rs  ocr.rs  position.rs  queue.rs  queue_bulk.rs  reading_goals.rs  review.rs  rss.rs  scheduler.rs  search.rs  segmentation.rs  video.rs  youtube_playlist.rs
src-tauri/src/commands/cloud/: backup.rs  mod.rs  oauth.rs  sync.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/generator/: mod.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs  tools.rs  types.rs
src-tauri/src/models/: category.rs  collection.rs  document.rs  extract.rs  learning_item.rs  mod.rs  playlist.rs  position.rs  queue.rs  reading_goal.rs
src-tauri/src/ocr/: mod.rs  processor.rs  providers.rs
src-tauri/src/processor/: epub.rs  html.rs  markdown.rs  mod.rs  pdf.rs
src-tauri/src/services/: mod.rs  position.rs  reading_goal.rs
(+609 files in other folders)
